fixed labels are mis-aligned with controls

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -109,7 +109,7 @@ p {
     float: left;
     text-align: right;
     clear: left;
-    padding: 0.5em 1em 0 0;
+    padding: 0 1em 0 0;
     width: 13em;
 }
 
